Removing margin left to align things correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1112,7 +1112,6 @@ table.default tbody
     /*float: left;
     margin-right: 2em;*/
     margin-bottom: 1em;
-    margin-left: 1em;
 }
 
 /*********************************************************************************/
